--- a/data-engineering-2024/workshops/01-dlt/Homework_data_talks_club_data_extraction_and_ingestion.ipynb
+++ b/data-engineering-2024/workshops/01-dlt/Homework_data_talks_club_data_extraction_and_ingestion.ipynb
@@ -199,7 +199,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Solution: First make sure that the following modules are installed:"
+        "# Solution"
       ],
       "metadata": {
         "id": "kKB2GTB9oVjr"
